# Gerenciamento-Python

./: BD.sql  Hello.html  README.md  clientes.sql  index.env  pyproject.toml  sistema_gerenciamento.py
